# coop

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/coop/: event.hpp  scheduler.hpp  source_location.hpp  task.hpp
include/coop/detail/: api.hpp  blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h  promise.hpp  task_base.hpp  tracer.hpp  work_queue.hpp
src/: CMakeLists.txt  event.cpp  scheduler.cpp  work_queue.cpp
test/: CMakeLists.txt  test.cpp
